--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,7 @@
 [build.environment]
   NODE_VERSION = "18"
   NPM_FLAGS = "--legacy-peer-deps"
+  PRISMA_GENERATE_DATAPROXY = "true"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
