--- a/package.json
+++ b/package.json
@@ -4,50 +4,50 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "type-check": "tsc --noEmit"
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "@netlify/plugin-nextjs": "^5.12.0",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.13.0",
+    "@prisma/client": "^5.10.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@types/node": "^20.10.5",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
-    "autoprefixer": "^10.4.16",
-    "bcryptjs": "^3.0.2",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "framer-motion": "^10.16.16",
+    "framer-motion": "^11.0.8",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.303.0",
+    "lucide-react": "^0.344.0",
     "next": "14.0.4",
     "next-auth": "^4.24.11",
-    "postcss": "^8.4.32",
-    "prisma": "^6.13.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "postcss": "^8",
+    "prisma": "^5.10.2",
+    "react": "^18",
+    "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss": "^3.3.6",
+    "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.3.3",
-    "zod": "^3.25.76"
+    "typescript": "^5",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
-    "@types/bcryptjs": "^3.0.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
-    "eslint": "^8.56.0",
+    "eslint": "^8",
     "eslint-config-next": "14.0.4"
   }
 }
