--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@neondatabase/serverless": "^1.0.1",
     "@netlify/plugin-nextjs": "^5.12.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.10.2",
@@ -41,7 +42,8 @@
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
