--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@stackframe/stack": "^2.8.28",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -31,7 +32,7 @@
     "framer-motion": "^11.0.8",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
-    "next": "14.0.4",
+    "next": "^15.4.6",
     "next-auth": "^4.24.11",
     "postcss": "^8",
     "prisma": "^5.10.2",
