--- a/package.json
+++ b/package.json
@@ -4,17 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
+    "lint": "next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
-    "@neondatabase/serverless": "^1.0.1",
     "@netlify/plugin-nextjs": "^5.12.0",
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.10.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -26,16 +22,12 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "framer-motion": "^11.0.8",
-    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
     "next": "^15.4.6",
-    "next-auth": "^4.24.11",
     "postcss": "^8",
-    "prisma": "^5.10.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
@@ -48,8 +40,6 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.10",
     "eslint": "^8",
     "eslint-config-next": "14.0.4"
   }
